--- a/templates/pages/voyages.html.twig
+++ b/templates/pages/voyages.html.twig
@@ -4,10 +4,22 @@
         <caption>Liste des voyages</caption>
         <thead>
             <tr>
-                <th class="text-left align-top" scope="col">Ville</th>    
-                <th class="text-left align-top" scope="col">Pays</th>     
-                <th class="text-end align-top" scope="col">Note</th>  
-                <th class="text-center align-top" scope="col">Date</th>
+                <th class="text-left align-top" scope="col">Ville
+                    <a href="{{ path('voyages.sort', {champ:'ville', ordre:'ASC'}) }}" class="btn btn-primary btn-sm active" role="button" aria-pressed="true"><</a>
+                    <a href="{{ path('voyages.sort', {champ:'ville', ordre:'DESC'}) }}" class="btn btn-primary btn-sm active" role="button" aria-pressed="true">></a>
+                </th>    
+                <th class="text-left align-top" scope="col">Pays
+                    <a href="{{ path('voyages.sort', {champ:'pays', ordre:'ASC'}) }}" class="btn btn-primary btn-sm active" role="button" aria-pressed="true"><</a>
+                    <a href="{{ path('voyages.sort', {champ:'pays', ordre:'DESC'}) }}" class="btn btn-primary btn-sm active" role="button" aria-pressed="true">></a>
+                </th>     
+                <th class="text-end align-top" scope="col">Note
+                    <a href="{{ path('voyages.sort', {champ:'note', ordre:'ASC'}) }}" class="btn btn-primary btn-sm active" role="button" aria-pressed="true"><</a>
+                    <a href="{{ path('voyages.sort', {champ:'note', ordre:'DESC'}) }}" class="btn btn-primary btn-sm active" role="button" aria-pressed="true">></a>
+                </th>  
+                <th class="text-center align-top" scope="col">Date
+                    <a href="{{ path('voyages.sort', {champ:'datecreation', ordre:'ASC'}) }}" class="btn btn-primary btn-sm active" role="button" aria-pressed="true"><</a>
+                    <a href="{{ path('voyages.sort', {champ:'datecreation', ordre:'DESC'}) }}" class="btn btn-primary btn-sm active" role="button" aria-pressed="true">></a>
+                </th>
             </tr>
         </thead>   
         
