--- a/templates/admin/admin.voyages.html.twig
+++ b/templates/admin/admin.voyages.html.twig
@@ -1,6 +1,11 @@
 {% extends "baseadmin.html.twig" %}
 
 {% block body %}
+    <p class="text-end">
+        <a href="{{ path('admin.voyage.ajout') }}" class="btn btn-primary">
+            Ajouter une nouvelle visite
+        </a>
+    </p>
     <table class="table table-striped">
         <caption>Liste des voyages (ville, pays, date et boutons pour modifier ou supprimer)</caption>
         <thead>
