--- a/templates/_admin.voyage.form.html.twig
+++ b/templates/_admin.voyage.form.html.twig
@@ -20,7 +20,18 @@
                 {{ form_row(formVisite.environnements) }}
             </div>
             <div class="col">
-            
+                <div>
+                    {{ form_row(formVisite.imageFile) }}
+                </div>
+                <div>
+                    image actuelle
+                    {% if visite.imagename %}
+                        <img src="{{ app.request.getBasePath()~vich_uploader_asset(visite, 'imageFile') }}"
+                             class="card-img-top" style="width:100%;height:auto;">
+                    {% else %}
+                        <p>(aucune image)</p>
+                    {% endif %}
+                </div>
             </div>
         </div>
         <div class="row">
